Social icon alignment issue. Update README.

--- a/joon_k_bio.styles.css
+++ b/joon_k_bio.styles.css
@@ -73,6 +73,10 @@ footer {
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+}
+
+i {
 }
 
 
